<resources>
    <string name="app_name">MyFirstTestProj</string>
    <string name="buttonSignIn">Sign In</string>
    <string name="buttonRegister">Register</string>
    <string name="hintPassword">Password</string>
    <string name="hintEmail">E-mail</string>
    <string name="hintName">Name</string>
    <string name="hintSurName">Surname</string>
    <string name="buttonAvatar">Avatar</string>
    <string name="avatar">Avatar</string>
    <string name="logout">Logout</string>

</resources>